2012-06-29  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The DTS and TrueHD packetizers were not
	flushed correctly. In some rare circumstances this could lead to
	mkvmerge aborting with an error message about the packet queue not
	being empty at the end of the muxing process. Fixes #772.

2012-06-17  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, mkvinfo's GUI, all .exes: enhancement: Added new icons by
	Ben Humpert based on the ones by Eduard Geier (see AUTHORS).

2012-06-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed handling of tracks in QuickTime/MP4
	files with a constant sample size. This fixes the other reason for
	the "constant sample size and variable duration not supported"
	error. Fixes issue 764.

	* mkvmerge: bug fix: Tracks in QuickTime/MP4 files with empty
	chunk offset tables (STCO and CO64 atoms) are ignored. This fixes
	one of the reasons for the "constant sample size and variable
	duration not supported" error.

2012-06-03  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed mmg's excessive CPU usage during muxing.

2012-06-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Reading DTS from AVI files often resulted in
	the error message that DTS headers could not be found in the first
	frames. This has been fixed. Fixes issue 759.

2012-05-31  Moritz Bunkus  <moritz@bunkus.org>

	* Documentation: Updated the cross-compilation guide and fixed the
	"setup_cross_compilation_env.sh" script.

2012-05-27  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.6.0.

	* documentation: Added Spanish translation of mmg's guide by
	Israel Lucas Torrijos (see AUTHORS).

2012-05-20  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: SRT subtitle entries with colons as the
	decimal separator are accepted. Fix for issue 754.

2012-05-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: XML tag files with <Simple> tags that only
	contained a name and nested <Simple> were wrongfully rejected as